// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Footer matches the last snapshot without saveChanges 1`] = `
<View>
  <Button
    disabled={true}
    onPress={undefined}
    text="Save Changes"
  />
  <TouchableOpacity
    activeOpacity={0.2}
    onPress={[Function]}
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      Cancel
    </Text>
  </TouchableOpacity>
  <Button
    onPress={[Function]}
    text="Logout"
  />
</View>
`;

exports[`Footer matches the last snapshot without saveChanges 2`] = `
<View>
  <Button
    disabled={false}
    onPress={[Function]}
    text="Save Changes"
  />
  <TouchableOpacity
    activeOpacity={0.2}
    onPress={[Function]}
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      Cancel
    </Text>
  </TouchableOpacity>
  <Button
    onPress={[Function]}
    text="Logout"
  />
</View>
`;

exports[`NotificationSettings cancelPassword sets the state, setting changed to false when email has not changed 1`] = `
Object {
  "changed": false,
  "editingPassword": false,
  "edits": Object {
    "confirmPassword": null,
    "email": "moo@moo.com",
    "password": null,
  },
  "errors": Object {
    "confirmPassword": null,
    "email": "bad email",
    "password": null,
  },
}
`;

exports[`NotificationSettings cancelPassword sets the state, setting changed to true when email has changed 1`] = `
Object {
  "changed": true,
  "editingPassword": false,
  "edits": Object {
    "confirmPassword": null,
    "email": "different@email.com",
    "password": null,
  },
  "errors": Object {
    "confirmPassword": null,
    "email": "bad email",
    "password": null,
  },
}
`;

exports[`NotificationSettings confirmLeave calls Alert.alert when changed is true 1`] = `
Array [
  Array [
    "You have unsaved changes",
    "Are you sure you want to discard your changes?",
    Array [
      Object {
        "onPress": [MockFunction],
        "text": "Discard",
      },
      Object {
        "style": "cancel",
        "text": "Continue Editing",
      },
    ],
  ],
]
`;

exports[`NotificationSettings has navigationOptions 1`] = `
Object {
  "headerStyle": Object {
    "backgroundColor": "white",
  },
  "headerTintColor": "#818A88",
  "headerTitleStyle": Object {
    "color": "black",
    "fontFamily": "Circular-Bold",
    "fontSize": 17,
  },
  "title": "Edit Account Info",
}
`;

exports[`NotificationSettings matches snapshot with state set 1`] = `
<View
  enabled={true}
  keyboardVerticalOffset={64}
  onLayout={[Function]}
>
  <RCTScrollView
    contentContainerStyle={
      Object {
        "flexGrow": 1,
      }
    }
  >
    <View>
      <SettingControl
        autoCapitalize="none"
        autoCorrect={false}
        error="bad email"
        keyboardType="email-address"
        label="EMAIL"
        onChange={[Function]}
        theme={
          Object {
            "control": Object {
              "marginBottom": 3,
            },
            "error": Object {
              "paddingBottom": 10,
              "paddingVertical": 0,
            },
            "hideErrorTriangle": true,
            "label": Object {
              "color": "#c0c6cd",
              "fontFamily": "Circular-Bold",
              "fontSize": 10,
              "marginBottom": 10,
            },
            "textInput": Object {
              "borderBottomColor": "#c0c6cd",
              "borderBottomWidth": 0.5,
              "color": "#56667a",
              "fontFamily": "Circular-Book",
              "fontSize": 16,
            },
          }
        }
        value="aa@bbb.com"
      />
      <SettingControl
        autoCapitalize="none"
        autoCorrect={false}
        error="needs to be longer"
        label="PASSWORD"
        onChange={[Function]}
        theme={
          Object {
            "control": Object {
              "marginBottom": 3,
            },
            "error": Object {
              "paddingBottom": 10,
              "paddingVertical": 0,
            },
            "hideErrorTriangle": true,
            "label": Object {
              "color": "#c0c6cd",
              "fontFamily": "Circular-Bold",
              "fontSize": 10,
              "marginBottom": 10,
            },
            "textInput": Object {
              "borderBottomColor": "#c0c6cd",
              "borderBottomWidth": 0.5,
              "color": "#56667a",
              "fontFamily": "Circular-Book",
              "fontSize": 16,
            },
          }
        }
        toggleSecureTextEntry={true}
        value="hunkjnkjn"
      />
      <SettingControl
        autoCapitalize="none"
        autoCorrect={false}
        error="needs to match"
        label="CONFIRM PASSWORD"
        onChange={[Function]}
        theme={
          Object {
            "control": Object {
              "marginBottom": 3,
            },
            "error": Object {
              "paddingBottom": 10,
              "paddingVertical": 0,
            },
            "hideErrorTriangle": true,
            "label": Object {
              "color": "#c0c6cd",
              "fontFamily": "Circular-Bold",
              "fontSize": 10,
              "marginBottom": 10,
            },
            "textInput": Object {
              "borderBottomColor": "#c0c6cd",
              "borderBottomWidth": 0.5,
              "color": "#56667a",
              "fontFamily": "Circular-Book",
              "fontSize": 16,
            },
          }
        }
        toggleSecureTextEntry={true}
        value="fkldsflkjdf"
      />
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits={undefined}
        accessible={true}
        collapsable={undefined}
        hasTVPreferredFocus={undefined}
        hitSlop={undefined}
        isTVSelectable={true}
        nativeID={undefined}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID={undefined}
        tvParallaxProperties={undefined}
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
        >
          Cancel Password Change
        </Text>
      </View>
      <View>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
        >
          SOCIAL ACCOUNTS
        </Text>
        <View>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
          >
            Facebook
          </Text>
          <View
            accessibilityComponentType={undefined}
            accessibilityLabel={undefined}
            accessibilityTraits={undefined}
            accessible={true}
            collapsable={undefined}
            hasTVPreferredFocus={undefined}
            hitSlop={undefined}
            isTVSelectable={true}
            nativeID={undefined}
            onLayout={undefined}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            testID={undefined}
            tvParallaxProperties={undefined}
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
            >
              Unlink
            </Text>
          </View>
        </View>
        <View>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
          >
            Twitter
          </Text>
          <View
            accessibilityComponentType={undefined}
            accessibilityLabel={undefined}
            accessibilityTraits={undefined}
            accessible={true}
            collapsable={undefined}
            hasTVPreferredFocus={undefined}
            hitSlop={undefined}
            isTVSelectable={true}
            nativeID={undefined}
            onLayout={undefined}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            testID={undefined}
            tvParallaxProperties={undefined}
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
            >
              Unlink
            </Text>
          </View>
        </View>
      </View>
      <View>
        <View>
          <View
            accessibilityComponentType={undefined}
            accessibilityLabel={undefined}
            accessibilityTraits={undefined}
            accessible={true}
            collapsable={undefined}
            hasTVPreferredFocus={undefined}
            hitSlop={undefined}
            isTVSelectable={true}
            nativeID={undefined}
            onLayout={undefined}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            testID={undefined}
            tvParallaxProperties={undefined}
          >
            <View>
              <View>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                >
                  Save Changes
                </Text>
              </View>
            </View>
          </View>
        </View>
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          collapsable={undefined}
          hasTVPreferredFocus={undefined}
          hitSlop={undefined}
          isTVSelectable={true}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          testID={undefined}
          tvParallaxProperties={undefined}
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
          >
            Cancel
          </Text>
        </View>
        <View>
          <View
            accessibilityComponentType={undefined}
            accessibilityLabel={undefined}
            accessibilityTraits={undefined}
            accessible={true}
            collapsable={undefined}
            hasTVPreferredFocus={undefined}
            hitSlop={undefined}
            isTVSelectable={true}
            nativeID={undefined}
            onLayout={undefined}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            testID={undefined}
            tvParallaxProperties={undefined}
          >
            <View>
              <View>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                >
                  Logout
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`NotificationSettings matches the last snapshot 1`] = `
<Unknown>
  <ScrollView
    contentContainerStyle={
      Object {
        "flexGrow": 1,
      }
    }
  >
    <SettingControl
      autoCapitalize="none"
      autoCorrect={false}
      error={undefined}
      keyboardType="email-address"
      label="EMAIL"
      onChange={[Function]}
      theme={
        Object {
          "control": Object {
            "marginBottom": 3,
          },
          "error": Object {
            "paddingBottom": 10,
            "paddingVertical": 0,
          },
          "hideErrorTriangle": true,
          "label": Object {
            "color": "#c0c6cd",
            "fontFamily": "Circular-Bold",
            "fontSize": 10,
            "marginBottom": 10,
          },
          "textInput": Object {
            "borderBottomColor": "#c0c6cd",
            "borderBottomWidth": 0.5,
            "color": "#56667a",
            "fontFamily": "Circular-Book",
            "fontSize": 16,
          },
        }
      }
      value=""
    />
    <View>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
      >
        PASSWORD
      </Text>
      <TouchableOpacity
        activeOpacity={0.2}
        onPress={[Function]}
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
        >
          Change Password
        </Text>
      </TouchableOpacity>
    </View>
    <SocialAccounts
      facebookUrl={undefined}
      loginWithFacebook={[Function]}
      twitterName={undefined}
      twitterPrompt={[Function]}
      unlinkAccount={[Function]}
      updateField={[Function]}
      updateNotificationSettings={[Function]}
    />
    <Footer
      cancel={[Function]}
      logout={[Function]}
      saveChanges={false}
    />
  </ScrollView>
</Unknown>
`;

exports[`NotificationSettings updateField sets the state 1`] = `
Object {
  "changed": true,
  "editingPassword": false,
  "edits": Object {
    "email": "newemail",
    "password": "ldlkd",
  },
  "errors": Object {
    "email": null,
    "password": "too short",
  },
}
`;

exports[`NotificationSettings validate validates its fields 1`] = `
Object {
  "changed": false,
  "editingPassword": false,
  "edits": Object {
    "confirmPassword": "lalala",
    "email": "ra",
    "password": "rarara",
  },
  "errors": Object {
    "confirmPassword": "Passwords must match",
    "email": "Must be a valid email",
    "password": "Password must be at least 9 characters.",
  },
}
`;

exports[`SocialAccounts matches the last snapshot 1`] = `
<View>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  >
    SOCIAL ACCOUNTS
  </Text>
  <SocialControl
    label="Facebook"
    onChange={[Function]}
    onLink={[Function]}
    provider="facebook"
    unlinkAccount={[Function]}
    value="foo.com"
  />
  <SocialControl
    label="Twitter"
    onChange={[Function]}
    onLink={[Function]}
    provider="twitter"
    unlinkAccount={[Function]}
    updateNotificationSettings={[Function]}
    value="rara"
  />
</View>
`;

exports[`SocialControl matches the last snapshot linked 1`] = `
<View>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  />
  <TouchableOpacity
    activeOpacity={0.2}
    onPress={[Function]}
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      Unlink
    </Text>
  </TouchableOpacity>
</View>
`;

exports[`SocialControl matches the last snapshot loading 1`] = `
<View>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  />
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  >
    Loading
  </Text>
</View>
`;

exports[`SocialControl matches the last snapshot unlinked 1`] = `
<View>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  />
  <TouchableOpacity
    activeOpacity={0.2}
    onPress={[Function]}
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      Link
    </Text>
  </TouchableOpacity>
</View>
`;
